Fixed overscroll on iOS.

--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,12 @@ body {
   flex-direction: column;
   background-color: #1F2937;
   height: 100vh;
+}
+
+html, body {
+  position: fixed;
   overflow: hidden;
+  width: 100%;
 }
 
 #app {
